workspace basics
